--- a/apply/index.html
+++ b/apply/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>搜索</title>
+	<title>贷款申请</title>
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="apply.css">
 	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
@@ -31,11 +31,13 @@
 		<div class="p4">&nbsp;&nbsp;&nbsp;&nbsp;1.所提供的资料真实、合法、有效，如有隐瞒或虚构，本人（本公司）自愿承担一切法律责任。</div>
 		<div class="p6">&nbsp;&nbsp;&nbsp;&nbsp;2.单个借款人（法人或其他组织）在所有网络借贷信息中介机构平台借款总余额（含本次借款金额）不超过人民币500万元；单个借款人（自然人）在所有网络借贷信息中介机构平台借款总余额（含本次借款金额）不超过人民币100万元。</div>
 		
+	</div>
+		<div class="foote">
 		<div class="p10">申请人签字（盖章）：<p class="seal"></p></div>
 		<div class="p11"> 联系方式：<p class="telephone"></p></div>
 		<div class="p12">日期：<span class="year"></span>年<span class="month2"></span>月<span class="day"></span>日</div>
-	</div>
-
+		</div>
+		
 	<script type="">
 		var ids = localStorage.getItem("memberId");
 			 $.ajax({ 
