--- a/apply/index.html
+++ b/apply/index.html
@@ -25,11 +25,11 @@
 <body>
 	<div class="h1">贷款申请</div>
 	<div class="apply">
-		<div class="p1">本人（本公司)<p class="name"></p>现申请通过安徽国元
-		互联网金融信息服务股份有限公司运营的网络平台公开融资人民币共计<p class="money"></p>万元,期限<p class="month"></p>个月</div>
-		<div class="p3">本人（本公司）在此郑重承诺：</div>
-		<div class="p4">1.所提供的资料真实、合法、有效，如有隐瞒或虚构，本人（本公司）自愿承担一切法律责任。</div>
-		<div class="p6">2.单个借款人（法人或其他组织）在所有网络借贷信息中介机构平台借款总余额（含本次借款金额）不超过人民币500万元；单个借款人（自然人）在所有网络借贷信息中介机构平台借款总余额（含本次借款金额）不超过人民币100万元。</div>
+		<div class="p1">&nbsp;&nbsp;&nbsp;&nbsp;本人（本公司)<span class="name"></span>现申请通过安徽国元
+		互联网金融信息服务股份有限公司运营的网络平台公开融资人民币共计<span class="money"></span>万元,期限<span class="month"></span>个月</div>
+		<div class="p3">&nbsp;&nbsp;&nbsp;&nbsp;本人（本公司）在此郑重承诺：</div>
+		<div class="p4">&nbsp;&nbsp;&nbsp;&nbsp;1.所提供的资料真实、合法、有效，如有隐瞒或虚构，本人（本公司）自愿承担一切法律责任。</div>
+		<div class="p6">&nbsp;&nbsp;&nbsp;&nbsp;2.单个借款人（法人或其他组织）在所有网络借贷信息中介机构平台借款总余额（含本次借款金额）不超过人民币500万元；单个借款人（自然人）在所有网络借贷信息中介机构平台借款总余额（含本次借款金额）不超过人民币100万元。</div>
 		
 	</div>
 		<div class="foote">
